# claude-mcp-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.json  config.json  config.lambda.example.json  desires.example.json  desires.json  memories.example.json  memories.json  pyproject.toml  self.example.json  self.json
deploy/: lambda-config.example.json
scripts/: deploy_lambda.sh
src/claude_mcp_bot/: __init__.py  bot.py  claude_client.py  desire.py  main.py  memory.py  self.py
src/embodied_ai/: __init__.py  bot.py  claude_client.py  config_loader.py  desire.py  lambda_handler.py  main.py  mcp_client.py  memory.py  self.py  tts.py  web_app.py
src/embodied_ai/web/: index.html  manifest.webmanifest  sw.js
src/embodied_ai/web/assets/: app.js  styles.css
