[project]
name = "claude-mcp-bot"
version = "0.1.0"
description = "Claude API + MCP Client bot - an independent AI assistant with sensory capabilities"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
claude-mcp-bot = "claude_mcp_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
